# SmartHome_Esp32S3_CH32V307

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  udp_server.py
CC2530_Firmware/: .gitignore  zcl_app_config.h
CC2530_Firmware/CC2530DB/: SampleSwitch.custom_argvars  SampleSwitch.ewp  SampleSwitch.ewt
CH32_Firmware/: PIN.txt
CH32_Firmware/CH32Controller/: .cproject  .project  .template  CH32Controller.launch  CH32Controller.wvproj
CH32_Firmware/CH32Controller/ETH/Driver/: eth_driver_RMII.c
CH32_Firmware/CH32Controller/User/: bsp_buzzer.c  bsp_buzzer.h  bsp_key.c  bsp_key.h  bsp_led.c  bsp_led.h  bsp_sensors.c  bsp_sensors.h  bsp_servo.c  bsp_servo.h  bsp_usart2.c  bsp_usart2.h  ch32v30x_conf.h  ch32v30x_it.c  dht11.c  dht11.h  main.c  uart_handler.c  uart_handler.h  udp_client.c  udp_client.h  zigbee_handler.c  zigbee_handler.h
components/face_recognition/: CMakeLists.txt  Kconfig  face_recognition.cpp  face_recognition.hpp  idf_component.yml
components/mqtt_handler/: CMakeLists.txt  mqtt_handler.c  mqtt_handler.h
components/voice_recognition/: CMakeLists.txt  voice_recognition.cpp  voice_recognition.hpp
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  main.cpp
